--- a/booking/templates/booking/home.html
+++ b/booking/templates/booking/home.html
@@ -1,1 +1,4 @@
-{% extends "booking/base.html" %}
+{% extends "booking/base.html" %} {% block content %}
+<h1>Về nhà đi con</h1>
+{% endblock content %}
+<h1>Về nhà đi con</h1>
